Fixed top of window being cut off

--- a/scss/main/master.scss
+++ b/scss/main/master.scss
@@ -7,7 +7,7 @@
 @import 'cardButtons';
 
 body {
-    margin: 0 20px 20px;
+    margin: 50px 20px 20px;
 }
 
 .beta-badge {
